--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ dependencies = [
     "pre-commit>=4.0.1",
     "autoflake>=2.3.1",
     "python-multipart>=0.0.20",
+    "openai>=2.8.1",
+    "boto3>=1.42.0",
+    "aws>=0.2.5",
+    "awscli>=1.43.6",
 ]
 
 [tool.pytest.ini_options]
