--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,8 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql+asyncpg://postgres:postgres@localhost:5432/hero_db
+# Database URL is set from environment variable in env.py
+# For Supabase: postgresql+asyncpg://postgres:[PASSWORD]@db.[PROJECT-REF].supabase.co:5432/postgres
+sqlalchemy.url = 
 
 [loggers]
 keys = root,sqlalchemy,alembic
