--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,6 @@ dependencies = [
     "sqlalchemy>=2.0.36",
     "greenlet>=3.0.0",
     "uvicorn>=0.32.1",
-    "python-jose[cryptography]>=3.3.0",
-    "bcrypt==4.0.1",
-    "passlib==1.7.4",
     "pydantic[email]>=2.5.2",
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.5",
@@ -30,6 +27,8 @@ dependencies = [
     "boto3>=1.42.0",
     "aws>=0.2.5",
     "awscli>=1.43.6",
+    "supabase>=2.0.0",
+    "PyJWT[crypto]>=2.8.0",
 ]
 
 [tool.pytest.ini_options]
