--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "awscli>=1.43.6",
     "supabase>=2.0.0",
     "PyJWT[crypto]>=2.8.0",
+    "psycopg2-binary (>=2.9.11,<3.0.0)",
 ]
 
 [tool.pytest.ini_options]
