--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,7 +3,7 @@ name = "evalhub"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0.0"
 dependencies = [
     "alembic>=1.14.0",
     "asyncpg>=0.30.0",
@@ -24,9 +24,6 @@ dependencies = [
     "autoflake>=2.3.1",
     "python-multipart>=0.0.20",
     "openai>=2.8.1",
-    "boto3>=1.42.0",
-    "aws>=0.2.5",
-    "awscli>=1.43.6",
     "supabase>=2.0.0",
     "PyJWT[crypto]>=2.8.0",
     "psycopg2-binary>=2.9.11,<3.0.0",
@@ -61,6 +58,11 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = ["api"]
+
+[tool.poetry.dependencies]
+s3fs = {extras = ["boto3"], version = ">=2023.12.0"}
+boto3 = "*"
+botocore = "*"
 
 [tool.poetry]
 packages = [{ include = "api" }]
