--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,16 @@
-DATABASE_URL=postgresql+asyncpg://user:pass@localhost:5432/dbname
-JWT_SECRET=your-secret-key
+# Base
+DATABASE_URL=
+JWT_SECRET=
+HF_TOKEN=
+
+# AWS S3 Configuration
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+S3_BUCKET_NAME=
+
+# SUPABASE
+SUPABASE_URL=
+SUPABASE_PUBLISHABLE_KEY=
+SUPABASE_SECRET_KEY=
+SUPABASE_JWT_SECRET=
