--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,7 +29,11 @@ dependencies = [
     "awscli>=1.43.6",
     "supabase>=2.0.0",
     "PyJWT[crypto]>=2.8.0",
-    "psycopg2-binary (>=2.9.11,<3.0.0)",
+    "psycopg2-binary>=2.9.11,<3.0.0",
+    "huggingface-hub>=0.20.0",
+    "lighteval>=0.4.0",
+    "transformers>=4.36.0",
+    "datasets>=2.16.0",
 ]
 
 [tool.pytest.ini_options]
