--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,17 +30,8 @@ dependencies = [
     "huggingface-hub>=0.20.0",
     "transformers>=4.36.0",
     "datasets>=2.16.0",
-    "litellm[caching] (>=1.81.1,<2.0.0)",
-    "langdetect (>=1.0.9,<2.0.0)",
-    # lighteval extended_tasks dependencies
-    "syllapy",  # ifbench
-    "emoji",  # ifbench
-    "spacy>=3.8.0",  # ifbench
-    "evaluate",  # slr_bench
-    # lighteval multilingual dependencies
-    "stanza",  # summarization
-    "jieba",  # chinese tokenizer
-    "pyvi",  # vietnamese tokenizer
+    "litellm[caching]>=1.81.1,<2.0.0",
+    "langdetect>=1.0.9,<2.0.0",
 ]
 
 [tool.pytest.ini_options]
