chore: update .gitignore for test artifacts
Add entries for:
- backend/lighteval/ (cloned dependency)
- backend/tests/evidence/*.json (generated test evidence)
- samples_from_evals/ and traces_rows.csv (test data)

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,13 @@ node_modules/
 
 experiments/
 .litellm_cache/
+
+# Cloned dependencies
+backend/lighteval/
+
+# Test evidence files (keep directory structure with .gitkeep)
+backend/tests/evidence/*.json
+
+# Misc test artifacts
+samples_from_evals/
+traces_rows.csv
