--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -52,6 +52,8 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 line_length = 88
+known_third_party = ["lighteval"]
+known_first_party = ["api", "scripts"]
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
