feat: use celery in place of threads

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,12 @@
 # Base
-DATABASE_URL=
-JWT_SECRET=
-HF_TOKEN=
+DATABASE_URL=postgresql+asyncpg://user:password@host:5432/dbname
+JWT_SECRET=your-secret-key
+HF_TOKEN=hf_your_token
 
 # AWS S3 Configuration
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
+AWS_REGION=us-east-2
 S3_BUCKET_NAME=
 
 # SUPABASE
@@ -14,3 +14,11 @@ SUPABASE_URL=
 SUPABASE_PUBLISHABLE_KEY=
 SUPABASE_SECRET_KEY=
 SUPABASE_JWT_SECRET=
+
+# LLM APIs
+OPENAI_API_KEY=
+BASETEN_API_KEY=
+
+# Redis & Celery
+REDIS_URL=
+CELERY_WORKERS=
