--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "datasets>=2.16.0",
     "litellm[caching]>=1.81.1,<2.0.0",
     "langdetect>=1.0.9,<2.0.0",
+    "celery[redis] (>=5.6.2,<6.0.0)",
 ]
 
 [tool.pytest.ini_options]
