--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "litellm[caching]>=1.81.1,<2.0.0",
     "langdetect>=1.0.9,<2.0.0",
     "celery[redis] (>=5.6.2,<6.0.0)",
+    "openrouter (>=0.6.0,<0.7.0)",
 ]
 
 [tool.pytest.ini_options]
